# mcp-defender-xdr

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OWASP_MCP_TOP10.md  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  tenants.example.json
.github/workflows/: ci.yml
src/mcp_defender_xdr/: __init__.py  audit.py  auth.py  defender_client.py  errors.py  server.py  tool_context.py  validation.py
src/mcp_defender_xdr/tools/: _runtime.py  advanced_hunting.py  alerts.py  incidents.py
tests/: conftest.py  test_auth.py  test_tools.py  test_validation.py
